[package]
name = "gkls-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
itertools = "0.10"
# plotters = "*"
# plotters-backend = "*"
plotly = "0.8"
lazy_static = "*"

[build-dependencies]
cc = "1.0"
