[package]
name = "gkls-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
itertools = "0.11"
lazy_static = "1.4"
plotters = {version="0.3", optional=true}

[build-dependencies]
cc = "1.0"

[features]
default = []
test_cbinding = []
examples = ["plotters"]

[[example]]
name = "plot_function"
path = "examples/plot_function.rs"
required-features = ["examples"]

