[package]
name = "gkls-rs"
version = "0.1.0"
edition = "2021"
authors = ["jonboh"]
description = "A pure rust implementation of the GKLS function generator"
homepage = "https://github.com/jonboh/gkls-rs"
repository = "https://github.com/jonboh/gkls-rs"
license = "MIT"
keywords = ["optimization", "math", "science"]
categories = ["science"]

exclude = ["assets/*"]

[dependencies]
rand = "0.8"
itertools = "0.11"
lazy_static = "1.4"
thiserror = "1.0"
plotters = {version="0.3", optional=true}

[build-dependencies]
cc = "1.0"

[features]
default = []
test_cbinding = []
examples = ["plotters"]

[[example]]
name = "plot_function"
path = "examples/plot_function.rs"
required-features = ["examples"]

[[example]]
name = "single_evaluation"
path = "examples/single_evaluation.rs"
required-features = ["examples"]

